--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "author": "Sefa Ilkimen",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-advanced-http": "^1.5.8",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-whitelist": "^1.3.2"
+        "cordova": "7.0.1",
+        "cordova-ios": "4.4.0",
+        "cordova-plugin-advanced-http": "1.5.8",
+        "cordova-plugin-compat": "1.1.0",
+        "cordova-plugin-file": "4.3.3",
+        "cordova-plugin-whitelist": "1.3.2"
     },
     "cordova": {
         "plugins": {
