--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova": "7.0.1",
+        "cordova-android": "6.2.3",
         "cordova-ios": "4.4.0",
-        "cordova-plugin-advanced-http": "1.5.8",
-        "cordova-plugin-compat": "1.1.0",
-        "cordova-plugin-file": "4.3.3",
+        "cordova-plugin-advanced-http": "file:///Users/sefa/Entwicklung/cordova-plugin-advanced-http",
+        "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-whitelist": "1.3.2"
     },
     "cordova": {
@@ -23,6 +24,7 @@
             "cordova-plugin-advanced-http": {}
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
