--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "A sample Apache Cordova application that demonstrates advanced HTTP plugin.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha test/test.js"
     },
     "author": "Sefa Ilkimen",
     "license": "Apache-2.0",
@@ -13,9 +13,9 @@
         "cordova": "7.0.1",
         "cordova-android": "6.2.3",
         "cordova-ios": "4.4.0",
-        "cordova-plugin-advanced-http": "file:///Users/sefa/Entwicklung/cordova-plugin-advanced-http",
-        "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-advanced-http": "1.6.1",
+        "cordova-plugin-compat": "1.2.0",
+        "cordova-plugin-file": "4.3.3",
         "cordova-plugin-whitelist": "1.3.2"
     },
     "cordova": {
@@ -27,5 +27,12 @@
             "android",
             "ios"
         ]
+    },
+    "devDependencies": {
+        "chai": "4.1.2",
+        "chai-as-promised": "7.1.1",
+        "colors": "1.1.2",
+        "mocha": "4.0.0",
+        "wd": "1.4.1"
     }
 }
