--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,48 @@
-language: node_js
-node_js:
-- lts/*
+sudo: false
+
+language: objective-c
+os: osx
+osx_image: xcode9.1
+
+cache: false
+
+before_install:
+  - export LANG=en_US.UTF-8
+  - brew update
+
+install:
+  # install minimum set of dependencies to run tests and linters
+  - npm install -g npm
+
+before_script:
+  # update npm and bower dependencies
+  - npm install
+
+script:
+  # install android SDK
+  -  wget http://dl.google.com/android/android-sdk_r24.4-macosx.zip
+  -  tar -xvf android-sdk_r24.4-macosx.zip
+
+  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter platform-tools
+  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter build-tools-23.0.2
+  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter android-23
+  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-android-support
+  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-android-m2repository
+  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-google-m2repository
+
+  -  export ANDROID_HOME=./android-sdk-macosx
+  -  export PATH=${PATH}:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/23.0.2
+
+  # install plugins etc.
+  - cordova prepare
+
+  # build Android and iOS packages
+  - cordova build android
+  - cordova build ios
+
+after_success:
+  # generate documentation
+  # - gulp doc
+
+deploy:
+  # deploy build to s3, testflight etc.
