--- a/.travis.yml
+++ b/.travis.yml
@@ -25,28 +25,29 @@ before_script:
 
 script:
   # install android SDK
-  -  wget http://dl.google.com/android/android-sdk_r24.4-macosx.zip
-  -  tar -xvf android-sdk_r24.4-macosx.zip
+  # -  wget http://dl.google.com/android/android-sdk_r24.4-macosx.zip
+  # -  tar -xvf android-sdk_r24.4-macosx.zip
 
-  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter platform-tools
-  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter build-tools-23.0.2
-  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter android-23
-  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-android-support
-  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-android-m2repository
-  -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-google-m2repository
+  # -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter platform-tools
+  # -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter build-tools-23.0.2
+  # -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter android-23
+  # -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-android-support
+  # -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-android-m2repository
+  # -  echo y | ./android-sdk-macosx/tools/android update sdk --no-ui --all --filter extra-google-m2repository
 
-  -  export ANDROID_HOME=./android-sdk-macosx
-  -  export PATH=${PATH}:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/23.0.2
+  # -  export ANDROID_HOME=./android-sdk-macosx
+  # -  export PATH=${PATH}:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/23.0.2
 
   # install gradle
-  - brew install gradle
+  # - brew install gradle
 
   # install plugins etc.
   - node_modules/.bin/cordova prepare
 
   # build Android and iOS packages
-  - node_modules/.bin/cordova build android
+  # - node_modules/.bin/cordova build android
   - node_modules/.bin/cordova build ios
+  - scripts/test.sh
 
 after_success:
   # generate documentation
