--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,9 @@ script:
   # build Android and iOS packages
   # - node_modules/.bin/cordova build android
   - node_modules/.bin/cordova build ios
-  - scripts/test.sh
+
+  - scripts/upload-artifacts.sh
+  - scripts/test.sh --ios --emulator
 
 after_success:
   # generate documentation
