--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova": "7.0.1",
-        "cordova-android": "6.2.3",
+        "cordova-android": "7.1.0",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-advanced-http": "1.6.1",
-        "cordova-plugin-compat": "1.2.0",
-        "cordova-plugin-file": "4.3.3",
-        "cordova-plugin-whitelist": "1.3.2"
+        "cordova-plugin-advanced-http": "2.0.1",
+        "cordova-plugin-file": "6.0.1"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-advanced-http": {}
+            "cordova-plugin-advanced-http": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android",
