--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ language: objective-c
 os: osx
 osx_image: xcode9.3
 
-cache: false
+cache:
+  directories:
+    - node_modules
 
 addons:
   sauce_connect: true
