--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ matrix:
 
     before_install:
     - export LANG=en_US.UTF-8
-    - sudo apt-get update
-    - sudo apt-get install nodejs
+    - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+    - sudo apt-get install -y nodejs
 
     install:
     - npm install
