--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "dependencies": {
         "cordova": "7.0.1",
         "cordova-android": "7.1.0",
-        "cordova-ios": "^4.4.0",
+        "cordova-ios": "4.5.5",
         "cordova-plugin-advanced-http": "2.0.1",
-        "cordova-plugin-file": "6.0.1"
+        "cordova-plugin-file": "6.0.1",
+        "cordova-plugin-whitelist": "1.3.3"
     },
     "cordova": {
         "plugins": {
